--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
-    "react-thunk": "^1.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
@@ -26,5 +25,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-thunk": "^1.0.0",
+    "redux-devtools-extension": "^2.13.8"
+  }
 }
